--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "JE Bots"
     ],
     "website": "https://infinityje.com",
-    "repository": "https://github.com/ImJanindu/AnyDL-Bot",
+    "repository": "https://github.com/meaall-com/yt-meaallh",
     "success_url": "https://t.me/Infinity_BOTs",
     "env": {
         "TG_BOT_TOKEN": {
